<resources>
    <string name="app_name">infomation</string>
    <string name="add_infomation">Add Infomation</string>
    <string name="name">Name</string>
    <string name="avatar">Avatar</string>
    <string name="birthday">Birthday</string>
    <string name="job">Job</string>
    <string name="introduction">Introduction</string>
    <string name="done">Done</string>
    <string name="addData">Add Data</string>
    <string name="delete"> Delete?</string>

    <!-- Activity 2 -->
    <string name="Infomation">Infomation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="introductionfragment">Introduction fragment</string>
    <string name="jobfragment">Job fragment</string>



    <!-- recyclerview -->
    <string name="sarah">Elizabeth Sarah</string>

</resources>