<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">


    <TextView
        android:id="@+id/Add_infomation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_infomation"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/name"
        android:layout_below="@+id/Add_infomation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_edittext"
        android:inputType="text"
        android:padding="10dip"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avatar"
        android:layout_below="@+id/name_box"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/avatar_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_edittext"
        android:inputType="text"
        android:padding="10dip"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_below="@+id/avatar_box"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/birthday_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_edittext"
        android:inputType="text"
        android:padding="10dip"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job"
        android:layout_below="@+id/birthday_box"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/job_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/job"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_edittext"
        android:inputType="text"
        android:padding="10dip"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:layout_below="@+id/job_box"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/introduction_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introduction"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_edittext"
        android:inputType="text"
        android:padding="40dip"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnLoad1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introduction_box"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="Show Infomation"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>